--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Gigi</title>
+	<title>Ghidza</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,500,700" rel="stylesheet">
 
@@ -12,7 +12,7 @@
 	<div class="navbar">
 		<div class="navbar-kiri">
 			<img class="logo" src="img/logo.png"/>
-			<h3 class="nav-item">G H I T Z A</h3>
+			<h3 class="nav-item">G H I D Z A</h3>
 		</div>
 		<div class="navbar-kanan">
 				<h4 class="nav-item">About</h4>
@@ -24,27 +24,31 @@
 	<div class="home">
 		<div class="home-tulisan">
 			<h2>Controlling Your Nutririon Easily through Your Apps</h2>
-			<h5>Ghitza adalah aplikasi bla bla bla bla bla bla bla bla bla</h5>
+			<!-- <h5>Ghidza adalah aplikasi bla bla bla bla bla bla bla bla bla</h5> -->
 			<div class="home-tulisan-btn">
 			<button class="nav-item2">Watch Video</button>
 			<button class="button2">Download</button>
 			</div>
 		</div>
 	</div>
+	
+
+
 	<div class="about">
 		<div class="about1">
 			<div class="about11">
 			<h3 class="ijo">ABOUT</h3>
 			<img class="logo" src="img/logo.png"/>
-			<h2>Ghitza</h2>
-			<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			<h2>Ghidza</h2>
+			<h5>Ghidza merupakan Startup, dengan produk aplikasi pelacak asupan gizi. Dengan aplikasi ini pengguna dapat mengetahui kandungan gizi yang terdapat pada makanan yang telah ia konsumsi. Fitur utama dari Ghidza adalah untuk mengontrol asupan gizi dari pengguna agar seimbang sesuai dengan kebutuhannya.
 			</h5>
 			</div>
 		</div>
 		<div class="about2">
-		<div class="fitur1">
+			<div class="video">
+	<iframe width="420" height="315"
+src="https://www.youtube.com/embed/ILGDM-HgfEk"></iframe></div>
+		<!-- <div class="fitur1">
 			<img src="img/network.svg">
 			<h3>EASY</h3>
 			<h5>bxja ksjdanjk ddasknd asdk ajs</h5>
@@ -63,12 +67,12 @@
 			<img src="img/network.svg">
 			<h3>EASY</h3>
 			<h5>bxja ksjdanjk ddasknd asdk ajs</h5>
-		</div>
+		</div> -->
 	</div>
 	</div>
 <div class="tulisan-fitur">
 	<h3 class="ijo">FEATURES</h3>
-	<h2>Ho it work?</h2>
+	<h2>How it work?</h2>
 </div>
 	<div class="fitur-besar1">
 		<div class="fitur-besar1-tulisan">
@@ -86,7 +90,7 @@
 	</div>
 	<div class="fitur-besar2">
 		<div class="fitur-besar2-gambar">
-			<img class="img1" src="img/fi2.png">
+			<img class="img1" src="img/fi1.png">
 		</div>
 		<div class="fitur-besar2-tulisan">
 			<div class="about11">
@@ -104,10 +108,9 @@
 		<div class="available-tulisan"><div class="about11">
 			<h3 class="ijo">DOWNLOAD</h3>
 			
-			<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			</h5>
+			<h3 class="tipis">Now Available on PlayStore<br> and AppStore
+			</h3>
+			<img class="googleplay" src="img/googleplay.png">
 			</div></div>
 			<div class="available-gambar">
 			<img class="img1" src="img/phones.png">
