--- a/index.html
+++ b/index.html
@@ -77,10 +77,8 @@ src="https://www.youtube.com/embed/ILGDM-HgfEk"></iframe></div>
 	<div class="fitur-besar1">
 		<div class="fitur-besar1-tulisan">
 			<div class="about11">
-			<h3>DAILY CONTROL</h3>
-			<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			<h3>TRACKING GIZI</h3>
+			<h5>Input makananmu dengan melalui teks maupun foto! Kemudian informasi harian asupan gizi kamu akan ditampilkan, dengan perhitungan gizi dari sistem Ghidza
 			</h5>
 			</div>
 		</div>
@@ -94,13 +92,23 @@ src="https://www.youtube.com/embed/ILGDM-HgfEk"></iframe></div>
 		</div>
 		<div class="fitur-besar2-tulisan">
 			<div class="about11">
-			<h3>WEEKLY REPORT</h3>
+			<h3>GAMIFIKASI</h3>
 			
-			<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			<h5>Sistem challenge card yang mengajakmu menjadi lebih sehat dengan mengkonsumsi jenis makanan tertentu. Jika kamu berhasil, kamu akan mendapat reward berupa badge yang dapat ditukarkan
 			</h5>
 			</div>
+		</div>
+	</div>
+	<div class="fitur-besar1">
+		<div class="fitur-besar1-tulisan">
+			<div class="about11">
+			<h3>SOCIAL PLATFORM</h3>
+			<h5>Untuk menjadi sehat itu tidak bisa sendirian. Tambah teman dan keluarga mu kedalam circle, dan berlomba-lomba untuk menjadi lebih sehat
+			</h5>
+			</div>
+		</div>
+		<div class="fitur-besar1-gambar">
+			<img class="img1" src="img/fi1.png">
 		</div>
 	</div>
 	<div class="available">
